# ice

./: CHANGELOG-3.4.md  README.md
.github/workflows/: c-cpp.yml
config/: Make.rules  PropertyNames.xml  icebuilder.props  iphoneos-SDKSettings.plist  iphonesimulator-SDKSettings.plist  macosx-SDKSettings.plist
cpp/: README.md
cpp/config/: Make.rules  glacier2router.cfg  templates.xml
cpp/doxygen/: config-cpp11  config-cpp98
cpp/gradle/: .gitignore  README.md  build.gradle
cpp/gradle/gradle/wrapper/: gradle-wrapper.properties
cpp/gradle/src/main/: AndroidManifest.xml
cpp/gradle/src/main/cpp/: CMakeLists.txt
cpp/include/Ice/: IconvStringConverter.h
cpp/include/IceUtil/: Config.h  ResourceConfig.h
cpp/msbuild/: ice.cpp.props  ice.nuget.targets  ice.test.props  ice.test.sln  ice.test.v100.sln  ice.testuwp.props  ice.testuwp.sln  ice.v100.sln  ice.v120.sln  ice.v140.sln  ice.v141.sln  ice.v142.sln  zeroc.ice.uwp.v140.nuspec  zeroc.ice.uwp.v140.props  zeroc.ice.uwp.v140.x64.nuspec  zeroc.ice.uwp.v140.x86.nuspec  zeroc.ice.uwp.v141.nuspec  zeroc.ice.uwp.v141.props  zeroc.ice.uwp.v141.x64.nuspec  zeroc.ice.uwp.v141.x86.nuspec  zeroc.ice.v100.nuspec  zeroc.ice.v100.props  zeroc.ice.v120.nuspec  zeroc.ice.v120.props  zeroc.ice.v140.nuspec  zeroc.ice.v140.props  zeroc.ice.v141.nuspec  zeroc.ice.v141.props  zeroc.ice.v142.nuspec  zeroc.ice.v142.props
cpp/src/Glacier2/msbuild/: glacier2router.vcxproj  glacier2router.vcxproj.filters
cpp/src/Glacier2CryptPermissionsVerifier/msbuild/: glacier2cryptpermissionsverifier.vcxproj
cpp/src/Glacier2Lib/msbuild/glacier2/: glacier2.vcxproj
cpp/src/Glacier2Lib/msbuild/glacier2++11/: glacier2++11.vcxproj  glacier2++11.vcxproj.filters
cpp/src/Ice/: ConnectionI.h  IconvStringConverter.cpp  PropertyNames.cpp  PropertyNames.h  RegisterPluginsInit.cpp  Thread.cpp
cpp/src/Ice/msbuild/ice/: ice.vcxproj  ice.vcxproj.filters
cpp/src/Ice/msbuild/ice++11/: ice++11.vcxproj  ice++11.vcxproj.filters
cpp/src/Ice/msbuild/iceuwp++11/: iceuwp++11.vcxproj  iceuwp++11.vcxproj.filters
cpp/src/IceBox/msbuild/iceboxadmin/: iceboxadmin.vcxproj
cpp/src/IceBridge/msbuild/: icebridge.vcxproj
cpp/src/IceDB/msbuild/: icedb.vcxproj
cpp/src/IceGrid/: AdapterCache.cpp  AdminI.cpp  AdminSessionI.cpp  Grammar.cpp  Internal.ice  LocatorI.cpp  LocatorRegistryI.cpp  Parser.cpp  RegistryAdminRouter.cpp  Scanner.cpp  ServerCache.cpp
cpp/src/IceGrid/msbuild/icegridadmin/: icegridadmin.vcxproj
cpp/src/IceGrid/msbuild/icegridnode/: icegridnode.vcxproj
cpp/src/IceGrid/msbuild/icegridregistry/: icegridregistry.vcxproj
cpp/src/IceStorm/: Admin.cpp  IceStormDB.cpp  IceStormInternal.ice  Makefile.mk  Scanner.cpp  Subscriber.cpp
cpp/src/IceStorm/msbuild/icestormadmin/: icestormadmin.vcxproj
cpp/src/IceStorm/msbuild/icestormdb/: icestormdb.vcxproj
cpp/src/IceStorm/msbuild/icestormservice/: icestormservice.vcxproj
cpp/src/IceUtil/: StringUtil.cpp  UtilException.cpp
cpp/src/IceXML/msbuild/: icexml.vcxproj
cpp/src/Slice/: JavaUtil.cpp  PythonUtil.cpp
cpp/src/Slice/msbuild/: slice.vcxproj
cpp/src/icegriddb/msbuild/: icegriddb.vcxproj
cpp/src/slice2cpp/: Gen.cpp
cpp/src/slice2cs/: Gen.cpp
cpp/src/slice2js/: Gen.cpp
cpp/src/slice2objc/: Gen.cpp
cpp/test/Common/: TestHelper.cpp
cpp/test/Common/msbuild/: packages.config  testcommon.vcxproj
cpp/test/Common/msbuild/uwp/: testcommonuwp++11.vcxproj
cpp/test/Glacier2/override/: test.py
cpp/test/Ice/defaultServant/msbuild/: client.vcxproj
cpp/test/Ice/defaultValue/msbuild/: client.vcxproj
cpp/test/Ice/echo/msbuild/: server.vcxproj
cpp/test/Ice/exceptions/: AllTests.cpp  TestAMDI.cpp  TestAMDI.h  TestI.h
cpp/test/Ice/location/: AllTests.cpp
cpp/test/Ice/operations/: Test.ice  TestAMD.ice
cpp/test/IceGrid/admin/: test.py
cpp/test/IceGrid/session/: AllTests.cpp
cpp/test/IceUtil/stacktrace/: StackTrace.debug.macOS  StackTrace.release-xcode10.macOS  StackTrace.release-xcode9.macOS
cpp/test/android/controller/: .gitignore  build.gradle
cpp/test/android/controller/src/main/cpp/: CMakeLists.txt  Controller.cpp
cpp/test/include/: TestHelper.h
csharp/: .gitignore  README.md
csharp/msbuild/: ice.net45.sln  ice.net45.test.sln  ice.net5.0.test.sln  ice.netstandard2.0.test.sln  zeroc.ice.net.csproj  zeroc.ice.net.nuspec
csharp/src/Ice/: PropertyNames.cs  Util.cs
csharp/src/IceBox/: ServiceManagerI.cs
csharp/test/xamarin/controller/: MainPage.xaml.cs  controller.csproj
csharp/test/xamarin/controller.Android/: controller.Android.csproj
csharp/test/xamarin/controller.UWP/: controller.UWP.csproj
csharp/test/xamarin/controller.iOS/: controller.iOS.csproj
java/: README.md  build.gradle  gradle.properties
java-compat/: README.md  build.gradle  gradle.properties  settings.gradle
java-compat/src/Glacier2/: build.gradle
java-compat/src/IceBox/: build.gradle
java-compat/test/android/controller/: gradle.properties
java/test/android/controller/: gradle.properties
js/: README.md  package-lock.json  package.json
js/src/Ice/: Initialize.js  PropertyNames.js
matlab/lib/: slice2matlab.m
matlab/msbuild/: buildToolbox.m  ice.proj  ice.toolbox.targets  toolbox.template.prj
matlab/msbuild/doc/: overview.html
matlab/src/msbuild/ice/: ice.vcxproj
matlab/src/msbuild/icethunk/: icethunk.vcxproj
objective-c/: Makefile  README.md
objective-c/config/: Make.rules
php/: Makefile  README.md
php/msbuild/: ice.props  ice.tests.props  zeroc.ice.php7.1.nuspec  zeroc.ice.php7.2.nuspec  zeroc.ice.php7.3.nuspec
php/src/php/msbuild/: php_ice.vcxproj
python/: Makefile
python/config/: Make.rules
python/modules/IcePy/msbuild/: icepy.vcxproj
python/msbuild/: ice.proj
python/python/: .gitignore  Makefile
ruby/: Makefile  README.md
ruby/ruby/: Ice.rb
scripts/: Component.py  IceGridUtil.py  IceStormUtil.py  Util.py
slice/IceBox/: IceBox.ice
slice/IceStorm/: IceStorm.ice
swift/: README.md  Rakefile
swift/ice.xcodeproj/: project.pbxproj
swift/ice.xcodeproj/xcshareddata/xcschemes/: Ice iOS.xcscheme  Ice macOS.xcscheme
swift/src/Ice/: Initialize.swift
(+639 files in other folders)
